[package]
name = "ccpp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
serde = { version = "1.0.193", features = [ "serde_derive" ] }
thiserror = "1.0.50"
toml = "0.8.8"
utf8-chars = "3.0.1"
which = "5.0.0"
